--- a/css/styles_mobile.css
+++ b/css/styles_mobile.css
@@ -77,7 +77,7 @@ body {
 	/* width: 100%; */
 	/* height: 100vh; */
 	box-sizing: border-box;
-	padding: 5px;
+	padding-left: 5px;
 	border: 5px solid #b59f5b;
 	/* background-color: #343131; */
 	position: absolute;
@@ -88,6 +88,8 @@ body {
 	/* flex-direction: column; */
 	align-items: center;
 	justify-content: center;
+	flex-wrap: wrap;
+	margin-top: 5px;
 }
 
 .js-menu_active .menu__button {
